if(OPENAL_FOUND)
  gul_add_test(Context ALContext Init)
endif()
if(OPENCL_FOUND)
  gul_add_test(Context CLContext Init)
  gul_add_test(Context CLProgram BuildValid)
  gul_add_test(Context CLProgram BuildInvalid)
  gul_add_test(Context CLProgram NoCurrentContext)
  gul_add_test(Context CLProgram RunUnknownKernel)
  gul_add_test(Context CLProgram RunNoArgs)
  gul_add_test(Context CLProgram RunOneArg)
  gul_add_test(Context CLProgram RunTwoArgs)
  gul_add_test(Context CLProgram RunTwoArgsFirstWrong)
endif()
if(OPENGL_FOUND)
#  gul_add_test(Context GLContext Init)
endif()

gul_create_test()

target_link_libraries(TestContext gul gulTestUtils)
